--- a/Graphs/LB/GNUmakefile
+++ b/Graphs/LB/GNUmakefile
@@ -5,7 +5,7 @@ AMREX_HOME ?= ../../../amrex
 #DEBUG        = TRUE
 #USE_CCACHE   = TRUE
 USE_OMP      = FALSE
-TINY_PROFILE = FALSE
+TINY_PROFILE = TRUE
 USE_MPI      = FALSE 
 USE_CUDA     = FALSE
 BL_NO_FORT   = TRUE
